# MFOS

./: .gitignore  .gitmodules  Boot1.asm  CMakeLists.txt  Dev.sh  Dockerfile  DotnetInstall.sh  IRLcomputerbuild.sh  Makefile  README.md  Stage1.asm  Stage2.asm  VM.py  bochsout.txt  bochsrc  boot.iso  bootsectscript.sh  build.sh  buildOS  buildbootpath  buildos.yaml  buildpath  buildpath.txt  floppy.img  functioncalls.c  hdd.asm  kernel  kernel.elf  link.lds  linker.ld  myfloppy.img  myos.iso  os.bochsrc  os.yaml  pointers.c  setup.bochsrc  test.yaml  tmpbuild.sh
Bochs/: bochsrc
Bootloader/: Stage1.asm
Core/: Makefile  debug.c  debug.h  kernel.asm  kerneldebugger.c  main.c  main_kernel.c  process.c  process.h  syscall.c  syscall.h
Fat-Stage1/: FAT-STAGE1.asm  Makefile  fat-stage1.asm
Fat-Stage2/: A20.inc  FAT-STAGE2.asm  Gdt.inc  KRNLDR.SYS  Makefile  asmlib16.inc  asmlib32.inc  fat-stage2.asm  stdio.inc
Fat12-OS/: CMakeLists.txt
Fat12-OS/Bochs/: bochsrc
Fat12-OS/BrokenThorn/: CMakeLists.txt
Fat12-OS/BrokenThorn/SysBoot/: CMakeLists.txt
Fat12-OS/BrokenThorn/SysBoot/Stage1/: Boot1.asm  CMakeLists.txt
Fat12-OS/BrokenThorn/SysBoot/Stage2/: CMakeLists.txt  KRNLDR.SYS  common.inc
Fat12-OS/BrokenThorn/SysCore/: System Core.sln  UpgradeLog.htm
Fat12-OS/BrokenThorn/SysCore/Backup/: System Core.sln
Fat12-OS/BrokenThorn/SysCore/Kernel/: Kernel.map  Kernel.vcproj  Kernel.vcxproj  Kernel.vcxproj.filters  Resource.rc  main.cpp
Fat12-OS/BrokenThorn/SysCore/Kernel/Debug/: DebugDisplay.asm  Kernel.exe.recipe  entry.asm  main.asm
Fat12-OS/BrokenThorn/SysCore/Kernel/Debug/Kernel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Kernel.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Fat12-OS/BrokenThorn/SysCore/Lib/: Lib.vcxproj
Fat12-OS/BrokenThorn/SysCore/Lib/Debug/Lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Fat12-OS/BrokenThorn/SysCore/debug/: Lib.lib
Fat12-OS/Setup/: Floppy.bat
Kernel/: CMakeLists.txt
Kernel/Kernel-C/: CMakeLists.txt  kernel.cpp
Kernel/Kernel-Rust/: CMakeLists.txt  Cargo.toml  logging.rs  main.rs  unwind.rs
Kernel/Kernel-Rust/arch/amd64/: link.ld  mod.rs
Kernel/Kernel-Rust/arch/x86/: link.ld  start.S  target.json
Kernel/Kernel-Rust/arch/x86_common/: debug.rs
Libraries/: Makefile  Syscall.asm  Userprint.c  lib.c  memLib.c  memLib.h  printLib.c
Loader/: Loader.asm
MBR/: MBR.asm  Makefile
OS/: Makefile  kernel_entry.asm
OS2/: README.md  boot.asm
OS2/Boot_segmentation/: boot_sect_segmentation.asm
OS2/boot_read_disk/: boot_sect_main.asm
Shell/: shell.c
Stage1/: Boot1.asm  Makefile  Stage1.asm  build.sh  fat-stage1.asm
Stage2/: Makefile  Stage2.asm  fat-stage2.asm
SysBoot/: A20.inc  CMakeLists.txt  Idt.inc  Makefile  ProtectedToReal.inc  Stage1_X86.asm  Stage2_X86.asm  asmlib16.inc  asmlib32.inc
SysBoot/Fat-Stage1/: FAT-STAGE1.asm  Stage1_X86.asm
SysBoot/Fat-Stage2/: A20.inc  FAT-STAGE2.asm  Idt.inc  Stage2_X86.asm  asmlib32.inc  asmlib64.inc
SysBoot/Fat32/: Boot1.asm  CMakeLists.txt  KRNLDR.SYS  Kernel_Entry_X86.asm  STAGE1.SYS  STAGE2.SYS  Stage1_X86.asm  Stage2_X86.asm
SysBoot/Routines/: A20.inc  Fat32.inc  Fat32Driver.inc  Idt.inc  Macros.inc  asmlib64.inc
SysBoot/includes/: Common16.inc  Common32.inc  Common64.inc  Gdt.inc  GlobalDefines.inc  Idt.inc  KernelLoader.inc  Paging.inc  cpu.inc  stdio16.inc  stdio64.inc
SysCalls/: Makefile  syscall.c  syscall.h
SysCore/: CMakeLists.txt  Gdt.inc  Kernel_X86.asm  Makefile  asmlib32.inc
SysCore/Core/: kerneldebugger.c  kerneldebugger.h  main.c
SysCore/PManagement/: process.c  process.h
SysCore/cpu/: cputrap.asm  cputrap.c
SysDep/Linux/: Dev.sh  Setup.sh  dev.sh
SysDependensies/: Dev.sh
SysDependensies/Linux/: Dev.sh  dotnet-install.sh
SysDrivers/: Makefile
SysDrivers/keyboard/: Keyboard.c
SysEmulation/: bochsrc
SysKernel/: CMakeLists.txt  kernel.c
SysKernel/Kernel-C/: CMakeLists.txt
SysKernel/Kernel-FSharp/: CMakeLists.txt  Library.fs
SysKernel/Kernel-Rust/: CMakeLists.txt  Cargo.toml  macros.rs
SysKernel/Kernel-Rust/arch/amd64/: start.S  target.json
SysKernel/Kernel-Rust/arch/x86/: mod.rs
SysKernel/Kernel-Rust/arch/x86_common/: io.rs
SysLib/: Makefile
SysLib/libc/: lib.c
SysLib/libc/Memory/: memLib.c
SysLib/libc/Print/: printLib.c  printLib.h
Trash/: trash.asm
Userspace/: Makefile  Userstart.asm  linker.lds  main.c
Userspace2/: Makefile  Userstart.asm  lib.h  main.c
Userspace3/: Makefile  main.c
boot/: 32bit_print.asm  CMakeLists.txt  Makefile  Stage1.asm  bootsect.asm  disk.asm  gdt.asm  print.asm  print_hex.asm  switch_pm.asm
boot/Stage1/: Makefile  Stage1.asm
boot/Stage2/: Makefile  Stage2.asm
boot/fat32/: Boot1.asm  CMakeLists.txt  Kernel_Entry_X86.asm  Stage2_X86.asm
boot/includes/: Attrib.inc  Common16.inc  DataSection.inc  Gdt.inc  GlobalDefines.inc  Library.inc  Macros.inc  Paging.inc
boot/old/: Stage1_X86.asm
bootsect/bios/: Loader.asm  boot.img  bootsectscript.sh  kernel_entry.asm  main_kernel.c  mbr.asm  trap.asm  trap.c
bootsect/bios/Fat-Stage1/: fat-stage1.asm
clang/lib/Headers/: limits.h
cmake/Modules/: CMakeDetermineRustCompiler.cmake  CMakeRustCompiler.cmake.in  CMakeRustInformation.cmake  FindRust.cmake
cpu/: Makefile  cputrap.c  cputrap.h  idt.c  idt.h  interrupt.asm  isr.c  isr.h  ports.c  ports.h  timer.c  trap.asm  trap.c  trap.h  type.h
dep/: dotnet-install.sh  setup.sh
driver/: keyboard.c  screen.c
drivers/: Keyboard.c  Keyboard.h  Makefile  disk.c  disk.h  keyboard.c  keyboard.h  screen.c  screen.h
iso/: floppy.img
kernel/: CMakeLists.txt  Makefile  kernel.c  kernel.h  main_kernel.c
kernel/drivers/: CMakeLists.txt
kernel/output/: CMakeLists.txt  terminal.c  terminal.h
kernel_entry/: Makefile  kernel_entry.asm
libc/: Makefile  function.h  mem.c  mem.h  memory.c  memory.h  print.c  string.c  string.h
rewriteable/: Makefile
tmp/: Makefile
